policies/no-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-latest
  annotations:
    policies.kyverno.io/title: No latest image tag
    policies.kyverno.io/category: Supply Chain
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-versioned-image
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: Las imágenes deben usar una versión explícita y no pueden usar latest.
        pattern:
          spec:
            containers:
              - image: "!*:latest"
